# aura

./: .gitIgnore  CMakeLists.txt  README.md
docs/: scribble.txt
include/: aura_const.h  aura_context.h
include/aura/: aura.hpp  environment.hpp  memory.hpp
src/: aura_context.cpp
src/aura/: environment.cpp  memory.cpp
tests/: create_destroy.cpp  main.cpp
